objects/SFDocumentor__VisualForce_Page__c.object
<CustomObject>
    <description>Collection of all VFP</description>
    <fields>
        <fullName>SFDocumentor__ApiVersion__c</fullName>
        <label>Api Version</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__ControllerKey__c</fullName>
        <label>Controller Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__ControllerType__c</fullName>
        <label>Controller Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__CreatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>VisualForce_Pages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Created_by_Name__c</fullName>
        <label>Created by Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__IsAvailableInTouch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Available In Touch ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__LastModifiedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>VisualForce_Pages1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Last_Sync_Date__c</fullName>
        <label>Last SFDoc Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Link_URL__c</fullName>
        <formula>HYPERLINK(SFDocumentor__Link__c , Name ,&apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Setup Link/URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__NamespacePrefix__c</fullName>
        <label>Namespace Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__SFDocumentorDesc__c</fullName>
        <label>SFDoc Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Used</fullName>
                </value>
                <value>
                    <fullName>Unused</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDocumentor__SystemModstamp__c</fullName>
        <label>SystemModstamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__VFP_Id__c</fullName>
        <externalId>true</externalId>
        <label>VFP Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Visualforce Page Collection</label>
    <listViews>
        <fullName>SFDocumentor__All</fullName>
        <columns>NAME</columns>
        <columns>SFDocumentor__ApiVersion__c</columns>
        <columns>SFDocumentor__ControllerType__c</columns>
        <columns>SFDocumentor__ControllerKey__c</columns>
        <columns>SFDocumentor__Description__c</columns>
        <columns>SFDocumentor__Status__c</columns>
        <columns>SFDocumentor__Link_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Visualforce Page Collection</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visualforce Page Collections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>